7948 Oppgraderte Spring Boot 3.5.7 til 4.0.3 og fjernet springfox
- Oppgraderte Spring Boot parent fra 3.5.7 til 3.5.11 (nyeste patch)
- Fjernet springfox 3.0.0 (springdoc allerede i bruk)
- Fjernet ubrukt swagger.version property
- Fjernet springfox fra token-validation ignore-liste og logback


Oppgraderte Spring Boot 3.5.11 til 4.0.3

Hovedendringer:
- Spring Boot 4.0.3 med modulariserte auto-konfigurasjoner
- Spring Framework 7.0.3, Hibernate 7.0, Jakarta EE 11
- Kotlin 2.3.0, Spring Kafka 4.0.3, token-support 6.0.3
- Jackson 3-ekskludering med Jackson 2 stop-gap (spring-boot-jackson2)
- Oppdaterte imports for SB 4.0 pakke-restrukturering i alle moduler
- Fikset @MockkBean i OAuthMockServer (SB 4.0 BeanOverride-endring)
- Fikset ClientProperties.builder() API-endring i AzureContextExchangeFilter
- La til spring-boot-webmvc-test, spring-boot-jdbc-test,
  spring-boot-data-jpa-test som eksplisitte test-avhengigheter
- Fikset Kotlin 2.3 + Spring Kafka 4.0 contravariant generics-problem